add geocode_btn option to hide geocode add user documentation add sol_partners_geo_location

--- a/sol_partners_geo_location/views/data.xml
+++ b/sol_partners_geo_location/views/data.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <record model="ir.actions.act_window" id="contacts.action_contacts">
-            <field name="name">res.partnerSolMap</field>
+            <field name="name">Partners</field>
             <field name="res_model">res.partner</field>
             <field name="view_mode">kanban,tree,form,activity,solmap</field>
     </record>
