extend from Base view, controller, model and render, rather then abstraction, because ACLs loading data

--- a/sol_ol_map_draw/views/data.xml
+++ b/sol_ol_map_draw/views/data.xml
@@ -7,7 +7,7 @@
             <tree string="Overlay">
                 <field name="name"/>
                 <field name="model_name"/>
-                <field name="overlay_template" widget="ace" options="{'mode': 'xml'}"/>
+                <!--<field name="overlay_template" widget="ace" options="{'mode': 'xml'}"/>-->
                 <field name="is_default"/>
             </tree>
         </field>
