--- a/sol_ol_map_draw/views/assets.xml
+++ b/sol_ol_map_draw/views/assets.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <template id="assets_backend" name="hello world assets" inherit_id="web.assets_backend">
+    <template id="assets_backend" name="sol map" inherit_id="web.assets_backend">
         <xpath expr="." position="inside">
             <script type="text/javascript" src="/sol_ol_map_draw/static/src/js/solmap_common.js"/>
             <script type="text/javascript" src="/sol_ol_map_draw/static/src/js/main_view.js"/>
