--- a/sol_partners_geo_location/views/data.xml
+++ b/sol_partners_geo_location/views/data.xml
@@ -11,10 +11,10 @@
                 <field name="partner_longitude"/>
                 <field name="partner_latitude"/>
                 <field name="map_form"/>
-                <!--<field name="invoice_ids" projection="id,name,display_name,code_rapport"/>
+                <field name="invoice_ids" projection="id,name,display_name,code_rapport"/>
                 <field name="total_invoiced" widget='monetary'/>
                 <field name="sale_order_ids" projection="id,name,display_name"/>
-                <field name="sale_order_count" />-->
+                <field name="sale_order_count" />
             </solmap>
         </field>
     </record>
