--- a/sol_customers_geo_location/views/data.xml
+++ b/sol_customers_geo_location/views/data.xml
@@ -12,6 +12,11 @@
                 <field name="partner_longitude"/>
                 <field name="partner_latitude"/>
                 <field name="map_form"/>
+                 <field name="invoice_ids" projection="id,name,display_name,code_rapport"/>
+                <field name="total_invoiced" widget='monetary'/>
+                <field name="currency_id" />
+                <field name="sale_order_ids" projection="id,name,display_name"/>
+                <field name="sale_order_count" />
             </solmap>
         </field>
     </record>
